--- a/pair.html
+++ b/pair.html
@@ -127,11 +127,12 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">© GlobalTechInfo</h3>
+            <h3 class="centered-text">©SILENT-KILLER-MD</h3>
             <br>
             <h6>Enter your number with country code.</h6>
             <div class="input-container">
-                <input placeholder="Enter Your Number" type="number" id="number" placeholder="enter your phone number with country code" name="">
+                <input placeholder="
+  923130433361" type="number" id="number" placeholder="enter your phone number with country code" name="">
                 <button id="submit">enter</button>
               </div>
              
