--- a/pair.html
+++ b/pair.html
@@ -131,8 +131,7 @@
             <br>
             <h6>Enter your number with country code.</h6>
             <div class="input-container">
-                <input placeholder="
-  923130433361" type="number" id="number" placeholder="enter your phone number with country code" name="">
+                <input placeholder="ENTER YOUR NUMBER" type="number" id="number" placeholder="enter your phone number with country code" name="">
                 <button id="submit">enter</button>
               </div>
              
